Support running with Java 17